--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,13 +8,13 @@ jobs:
 
         steps:
         - name: Check out code
-          uses: actions/checkout@v2
+          uses: actions/checkout@v4
 
         - name: Set up Elixir
-          uses: actions/setup-elixir@v1
+          uses: erlef/setup-beam@v1
           with:
-            elixir-version: 1.16
-            otp-version: 26.0
+            elixir-version: 1.16.0
+            otp-version: 26.2
 
         - name: Install Dependencies
           run: mix deps.get
